Retail Lending-Production/src/objects/Projects__c.object
<CustomObject>
    <fields>
        <fullName>Alias__c</fullName>
        <description>Used for the 2nd name of the project eg : adarsh palm retreat tower 1 , alias- gulmohur</description>
        <inlineHelpText>Used for the 2nd name of the project eg : adarsh palm retreat tower 1 , alias- gulmohur</inlineHelpText>
        <label>Alias</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approximate_Cost_Per_Unit__c</fullName>
        <label>Approximate Cost Per Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Builder_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Builder Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Builder_Property_Approved__c</fullName>
        <label>Builder Property Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CREATED_BY__c</fullName>
        <description>ENTER THE NAME OF THE PERSON CREATING THIS DATA</description>
        <label>CREATED BY</label>
        <picklist>
            <picklistValues>
                <fullName>ANSARI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BABU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MADHUMITA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAIKAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWEETY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City_of_Project__c</fullName>
        <label>Property City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Stage__c</fullName>
        <inlineHelpText>forthcoming- not launched for sale
prelaunch- soft launch &amp; sanctioned plans are pending
just launched -1 to 2 month of begining of sales
ongoing - stage from launch till completion of the property.
completed- ready for possession &amp; beyond</inlineHelpText>
        <label>Development Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just Launched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forthcoming</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gym__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gym</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Locations__c</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_Towers__c</fullName>
        <label>No. of Towers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_units__c</fullName>
        <label>No. of units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Subtype__c</fullName>
        <label>Property Subtype</label>
        <picklist>
            <picklistValues>
                <fullName>Low Rise Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Rise Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Rise Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Suites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Condos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flex Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution/Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck Terminal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Standing Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Box Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Box Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Condo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Use Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping-Regional Mall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping-Neighborhood Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping-Power Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping-Strip Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping-Open Air/Lifestyle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping-Theme/Tourist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping-Outlet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <picklist>
            <picklistValues>
                <fullName>MultiFamily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior/Retirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Farm/Ranch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>Projects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Swimming_Pool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Swimming Pool</label>
        <type>Checkbox</type>
    </fields>
    <label>Tower</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Location__c</columns>
        <columns>City_of_Project__c</columns>
        <columns>Property_Subtype__c</columns>
        <columns>Property_Type__c</columns>
        <columns>Development_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Towers Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I90000000lLvZEAU_00N900000031ZskEAE</fullName>
        <active>true</active>
        <field>Property__c.ProjectName__c</field>
        <filterItems>
            <field>Projects__c.Builder_Name__c</field>
            <operation>startsWith</operation>
            <valueField>$Source.Builder_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Property_Project Name</name>
        <sourceObject>Property__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000000lLvaEAE_00N90000003iQUzEAM</fullName>
        <active>true</active>
        <field>loans__c.Project__c</field>
        <filterItems>
            <field>$Source.Property__c</field>
            <operation>equals</operation>
            <valueField>Projects__c.Property__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Loan_Tower</name>
        <sourceObject>loans__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000000lMHJEA2_00N900000031ZmsEAE</fullName>
        <active>true</active>
        <field>Unit__c.Project_Name__c</field>
        <filterItems>
            <field>$Source.property__c</field>
            <operation>equals</operation>
            <valueField>Projects__c.Property__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Unit_Project Name</name>
        <sourceObject>Unit__c</sourceObject>
    </namedFilters>
    <pluralLabel>Towers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>